// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders link correctly 1`] = `
<a
  className="Link__link___-IU0S"
  href="/section"
  onClick={[Function]}
  onMouseEnter={[Function]}
/>
`;

exports[`renders link correctly 2`] = `
<a
  className="Link__link___-IU0S"
  href="/"
  onClick={[Function]}
  onMouseEnter={[Function]}
/>
`;
